Get a collection of values from a map